# pyembed

./: CMakeLists.txt  README.md
include/: pyembed.h
src/: example.cpp  pyembed.cpp
